--- a/views/account.erb
+++ b/views/account.erb
@@ -13,5 +13,7 @@
         <li><a href="/admin/schedule">Schedule</a></li>
         <li><a href="/admin/users">Users</a></li>
         <li><a href="/admin/positions">Positions</a></li>
+        <li><a href="/admin/locations">Locations</a></li>
+        <li><a href="/admin/types">Event Types</a></li>
 	</ul>		
 <% end %>
