--- a/views/admin.erb
+++ b/views/admin.erb
@@ -3,4 +3,6 @@
 		<li><a href="/admin/schedule">Schedule</a></li>
 		<li><a href="/admin/users">Users</a></li>
 		<li><a href="/admin/positions">Positions</a></li>
+		<li><a href="/admin/locations">Locations</a></li>
+		<li><a href="/admin/types">Event Types</a></li>
 	</ul>	
