--- a/views/admin_monthly.erb
+++ b/views/admin_monthly.erb
@@ -23,7 +23,7 @@
 	<% haveSQL = "SELECT COUNT(ueid) FROM user_events WHERE status = 2 AND event_id = " + event.eid.to_s
 	   have = repository(:default).adapter.select(haveSQL) %>
 		<tr>
-			<td<% if event.need <= have[0] %> class="greenLink"<% end %>><a href="/admin/schedule/event/<%= event.eid %>-<%= @month.erid %>"><%= event.event_day_name %> 
+			<td><a href="/admin/schedule/event/<%= event.eid %>-<%= @month.erid %>"><%= event.event_day_name %> 
 			<% if @month.month == 1 %>January<% end %>
 			<% if @month.month == 2 %>February<% end %>
 			<% if @month.month == 3 %>March<% end %>
@@ -37,18 +37,18 @@
 			<% if @month.month == 11 %>November<% end %>
 			<% if @month.month == 12 %>December<% end %>
 			 <%= event.event_day %></a></td>
-			 <td<% if event.need <= have[0] %> class="greenLink"<% end %>><%= event.event_name %>: 
+			 <td><%= event.event_name %>: 
 			 
 			 <% e_type = EventType.all(:etid => event.type) %>
 			 <%= e_type[0].name %>
 
 			 </td>
-			 <td<% if event.need <= have[0] %> class="greenLink"<% else %> class="blueLink"<% end %>><a href="/admin/edit/event/<%= event.eid %>-<%= event.event_range %>">Edit</a> | <a href="/admin/delete/event/<%= event.eid %>-<%= @month.erid %>">Delete</a></td>
-			 <td<% if event.need <= have[0] %> class="greenLink"<% end %>>Need: <a href="/admin/edit/event/<%= event.eid %>-<%= event.event_range %>"><%= event.need %></a></td>
-			 <td<% if event.need <= have[0] %> class="greenLink"<% end %>>Have: 
+			 <td class="blueLink"><a href="/admin/edit/event/<%= event.eid %>-<%= event.event_range %>">Edit</a> | <a href="/admin/delete/event/<%= event.eid %>-<%= @month.erid %>">Delete</a></td>
+			 <td>Need: <a href="/admin/edit/event/<%= event.eid %>-<%= event.event_range %>"><%= event.need %></a></td>
+			 <td>Have: 
 			   	<a href="/admin/schedule/event/<%= event.eid %>-<%= @month.erid %>"><%= have[0] %></a>
 			</td>
-			 <td<% if event.need <= have[0] %> class="greenLink"<% end %>>Status: <% if event.need <= have[0] %><span class="greenLink">Set!</span><% else %><span class="red">Not Set</a><% end %></td>
+			 <td>Status: <% if event.need <= have[0] %><span class="greenLink">Set!</span><% else %><span class="red">Not Set</a><% end %></td>
 		</tr>
 	<% end %>
 </table>
